[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ridbpy"
description = "ridbPy"
version = "0.0.1"
authors = ["Justin Flannery <juftin@juftin.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/juftin/ridbpy"
repository = "https://github.com/juftin/ridbpy"
documentation = "https://juftin.com/ridbpy"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
click = ">=8.0.1"
sqlmodel = "^0.0.6"
requests = "^2.28.1"
SQLAlchemy = "<=1.4.32"
pandas = "~1.2"
pytest = { version = ">=6.2.5", optional = true }
rich = ">=10.0.0"
coverage = { extras = ["toml"], version = ">=6.2", optional = true }
flake8 = { version = ">=3.0.0", optional = true }

[tool.poetry.extras]
dev = ["pytest", "coverage", "flake8"]

[tool.poetry.scripts]
ridbpy = "ridbpy.__main__:main"

[tool.poetry.urls]
Changelog = "https://github.com/juftin/ridbpy/releases"
