[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ridbpy"
description = "Pythonic Interface to the Recreation Information Database (RIDB)"
version = "0.0.2"
authors = ["Justin Flannery <juftin@juftin.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/juftin/ridbpy"
repository = "https://github.com/juftin/ridbpy"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
click = ">=8.0.1"
sqlmodel = "^0.0.6"
requests = "^2.28.1"
SQLAlchemy = "<=1.4.32"
pandas = "~1.2"
rich = ">=10.0.0"
pytest = { version = ">=6.2.5", optional = true }
flake8 = { version = ">=3.0.0", optional = true }
coverage = { version = ">=6.2", extras = ["toml"], optional = true }
mypy = { version = "^0.971", optional = true }
tox = { version = "^3.25.1", optional = true }

[tool.poetry.dev-dependencies]
pytest = ">=5.2"
coverage = { extras = ["toml"], version = ">=6.2" }
flake8 = ">=3.0.0"
tox = "^3.25.1"
mypy = "^0.971"

[tool.poetry.extras]
dev = [
    "pytest",
    "flake8",
    "coverage",
    "mypy",
    "tox"
]

[tool.poetry.scripts]
ridbpy = "ridbpy._cli:command_line_interface"

[tool.poetry.urls]
Changelog = "https://github.com/juftin/ridbpy/releases"
